@@ -181,6 +181,7 @@ var localized_strings,
 			games_installed: "Installed Games",
 			badges_drops: "Badges With Card Drops Remaining",
 			binder_view: "Binder View",
+			sort_by: "Sort by:",
 			sales_total: "Sales total",
 			purchase_total: "Purchase total",
 			net_gain: "Net gain",
